--- a/packages/cdktf-cli/package.json
+++ b/packages/cdktf-cli/package.json
@@ -32,6 +32,7 @@
     "@cdktf/hcl2json": "0.0.0",
     "@graphql-tools/graphql-file-loader": "^6.2.7",
     "@graphql-tools/load": "^6.2.8",
+    "@npmcli/ci-detect": "^1.3.0",
     "@skorfmann/ink-confirm-input": "^3.0.0",
     "@skorfmann/terraform-cloud": "^1.10.1",
     "@types/node": "^14.0.26",
@@ -56,11 +57,12 @@
     "indent-string": "^4.0.0",
     "ink": "^3.0.8",
     "ink-spinner": "^4.0.1",
-    "inquirer": "^8.1.2",
     "ink-use-stdout-dimensions": "^1.0.5",
+    "inquirer": "^8.1.2",
     "jsii-srcmak": "^0.1.272",
     "lodash.isequal": "^4.5.0",
     "log4js": "^6.3.0",
+    "node-machine-id": "^1.1.12",
     "open": "^7.0.4",
     "parse-gitignore": "^1.0.1",
     "react": "<17.0.0",
@@ -70,7 +72,7 @@
     "strip-ansi": "^6.0.0",
     "subscriptions-transport-ws": "^0.9.19",
     "utility-types": "^3.10.0",
-    "uuid": "^8.3.0",
+    "uuid": "^8.3.2",
     "yargs": "^17.0",
     "ws": "^7.5.3",
     "zod": "^1.11.7"
